js/src/tests/test262/built-ins/Error/prototype/stack/setter-receiver-is-other-prototype.js































var set = Object.getOwnPropertyDescriptor(Error.prototype, 'stack').set;

var prototypes = [];
for (var i = 0; i < allErrorConstructors.length; ++i) {
  var Ctor = allErrorConstructors[i];
  
  if (Ctor === Error) continue;
  prototypes.push([Ctor.name + '.prototype', Ctor.prototype]);
}

for (var i = 0; i < prototypes.length; ++i) {
  var label = prototypes[i][0];
  var proto = prototypes[i][1];

  assert.sameValue(
    Object.getOwnPropertyDescriptor(proto, 'stack'),
    undefined,
    label + ': precondition: no own "stack" property'
  );

  set.call(proto, 'sentinel-' + label);

  verifyProperty(proto, 'stack', {
    value: 'sentinel-' + label,
    writable: true,
    enumerable: true,
    configurable: true,
  });

  
  
  
  assert.sameValue(
    Object.getOwnPropertyDescriptor(proto, 'stack'),
    undefined,
    label + ': cleanup'
  );
}

reportCompare(0, 0);
